<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Real Estate Manager</string>

    <string name="navigation_drawer_close">Close</string>
    <string name="navigation_drawer_open">Open</string>

    <string name="notifications">Notifications</string>
    <string name="enable_notifications">Enable Notifications</string>

    <string name="colon">:</string>
    <string name="suspens">...</string>
    <string name="obl">*</string>
    <string name="room">Room</string>
    <string name="rooms">Rooms</string>
    <string name="min_label">Min</string>
    <string name="max_label">Max</string>
    <string name="start_label">Start</string>
    <string name="end_label">End</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="add_re">"Add Real Estate"</string>
    <string name="edit_re">"Edit Real Estate"</string>
    <string name="home">Home</string>
    <string name="loan_simulator">Loan Simulator</string>
    <string name="simulate_loan">Simulate your Loan</string>
    <string name="calculate">Calculate</string>
    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="years_unit">years</string>
    <string name="capital">Capital</string>
    <string name="capital_borrowed">Capital Borrowed</string>
    <string name="duration_of_loan">Duration of Loan</string>
    <string name="rate_interest">Interest\'s rate</string>
    <string name="monthly_payment">Monthly payment</string>
    <string name="on_label">On :</string>
    <string name="number_index">Number : </string>
    <string name="amortizations_table">Amortizations Table</string>
    <string name="settings">Settings</string>
    <string name="power_off">Turn Off</string>
    <string name="check">Check</string>
    <string name="save">Save</string>
    <string name="overview">Overview</string>
    <string name="insert">Insert</string>
    <string name="legend">Legend : </string>
    <string name="pick_up_photo">Pick up Photo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="loading">Loading ...</string>
    <string name="search_address">Search Address</string>
    <string name="set_filters_by">Set Filters by</string>
    <string name="sector">Sector</string>
    <string name="since_date">Since Date</string>
    <string name="distance">Distance</string>
    <string name="since">Since</string>
    <string name="main">MAIN</string>
    <string name="photo_number">Photo\'s number</string>
    <string name="reset_filters">Reset Filters</string>
    <string name="search_filters">Search with Filters</string>
    <string name="nc">NC</string>
    <string name="m2">m²</string>
    <string name="km">km</string>

    <string name="added_new_re">Added a new Real Estate !</string>
    <string name="edited_re">Edited Real Estate !</string>

    // FAIL
    <string name="no_results">There is any Real Estate registered !</string>
    <string name="no_results_title">No Real Estate registered !</string>
    <string name="no_results_message">There is any Real Estate registered, you have to add at least one for the application can start list em, Click on \"CREATE\" for implement your first Real Estate !</string>
    <string name="no_results_cancel">Do Anything</string>
    <string name="no_results_edit">Create</string>

    <string name="filters_failed">Any Real Estate found with filters !</string>
    <string name="filters_failed_title">Any Real Estate found !</string>
    <string name="filters_failed_message">There is any Real Estate found with those filters\'s set , you can either change yours settings on clicking \"REEDIT\" either just step aside filters and reload all yours Real Estates by clicking \"CANCEL\" !</string>
    <string name="filters_failed_cancel">Cancel Filters</string>
    <string name="filters_failed_edit">Reedit Filters</string>

    <string name="no_photos">There is any Photos registered !</string>
    <string name="no_photos_title">Any Photos registered !</string>
    <string name="no_photos_message">There is any Photo registered, you have to add at least one for being able to save a Real Estate, Click on \"Add\" for add photos !</string>
    <string name="no_photos_cancel">Cancel</string>
    <string name="no_photos_edit">Add</string>

    <!-- ADD & UPDATE LABELS  -->
    <string name="currency">Currency</string>

    <string name="media">Media</string>
    <string name="state">State</string>
    <string name="location">Location</string>
    <string name="nf_on_map">Did not found this location on map</string>

    <string name="total_rooms">Total Rooms</string>
    <string name="state_of_property">State of Property</string>
    <string name="search_location">Locate with Google</string>

    <string name="street_num">Street Num</string>
    <string name="street">Street</string>
    <string name="zp">Zip Code</string>
    <string name="locality">Locality</string>
    <string name="country">Country</string>
    <string name="type">Type</string>
    <string name="surface">Surface</string>
    <string name="district">District</string>
    <string name="room_number">Number of Rooms</string>
    <string name="bed_number">Bedrooms</string>
    <string name="kitchen_number">Kitchens</string>
    <string name="bath_number">Bathrooms</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="ppm">Price/m²</string>
    <string name="photos">Photos</string>
    <string name="points_of_interest">Points of Interest</string>
    <string name="status">Status</string>
    <string name="agent">Agent</string>
    <string name="date_of_market">Market\'s Date</string>
    <string name="date_of_sold">Sold\'s Date</string>
    <string name="address">Address</string>
    <string name="define_main">Define this photo as main</string>

    <string name="one_photo">* must have at least one photo set as main</string>

    <string name="delete_photos_title">Delete Photos</string>
    <string name="delete_photos_msg">Want you really delete these photos ?</string>
    <string name="delete_re_title">Delete Real Estates</string>
    <string name="delete_re_msg">Want you really delete all the real estates registered in application\'s storage ?</string>
    <string name="insert_re_title">Insert Real Estates</string>
    <string name="insert_re_msg">Want you really generate several real estates from an encoded files (made for give an example) ?</string>

    <string-array name="add_edit_ind">
        <item>@string/address</item>
        <item>@string/type</item>
        <item>@string/surface</item>
        <item>@string/room_number</item>
        <item>@string/bed_number</item>
        <item>@string/bath_number</item>
        <item>@string/kitchen_number</item>
        <item>@string/description</item>
        <item> </item>
        <item>@string/currency</item>
        <item>@string/price</item>
        <item>@string/photos</item>
        <item> </item>
        <item>@string/points_of_interest</item>
        <item>@string/status</item>
        <item>@string/date_of_market</item>
        <item>@string/date_of_sold</item>
        <item>@string/agent</item>
    </string-array>

    <string name="add_symbol">+</string>
    <string name="minus_symbol">-</string>

    <!-- CURRENCY -->
    <string name="dollar_symbol">$</string>
    <string name="euro_symbol">€</string>

    <string name="dollar">Dollar</string>
    <string name="euro">Euro</string>

    <string-array name="currency_ind">
        <item>@string/dollar</item>
        <item>@string/euro</item>
    </string-array>

    <string-array name="status_ind">
        <item>to Sale</item>
        <item>Sold</item>
    </string-array>

    <string name="property_sold">Property sold</string>

    <string-array name="type_ind">
        <item>Flat</item>
        <item>House</item>
        <item>Villa</item>
        <item>Duplex</item>
        <item>Loft</item>
        <item>Manor</item>
        <item>Castle</item>
    </string-array>

    <string-array name="poi_ind">
        <item>School</item>
        <item>Shops</item>
        <item>Park</item>
        <item>Subway</item>
        <item>Bus</item>
        <item>Train</item>
        <item>Hospital</item>
        <item>Airport</item>
    </string-array>

    <string-array name="photos_ind">
        <item>\?</item>             <!-- 0 -->
        <item>Facade</item>         <!-- 1 -->
        <item>Hall</item>           <!-- 2 -->
        <item>Lounge</item>         <!-- 3 -->
        <item>Kitchen</item>        <!-- 4 -->
        <item>Bedroom</item>        <!-- 5 -->
        <item>Bathroom</item>       <!-- 6 -->
        <item>Office</item>         <!-- 7 -->
        <item>Dressing</item>       <!-- 8 -->
        <item>Garden</item>         <!-- 9 -->
        <item>Terrace</item>        <!-- 10 -->
        <item>Garage</item>         <!-- 11 -->
        <item>Attic</item>          <!-- 12 -->
        <item>Cellar</item>         <!-- 13 -->
        <item>Utility</item>        <!-- 14 -->
        <item>View</item>           <!-- 15 -->
    </string-array>

    <string-array name="nums_ind">
        <item>\?</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>

    // FILTERS

    <string name="filter_type">Filters : set Type</string>
    <string name="filter_surface">Filters : set Surface\'s Min and Max</string>
    <string name="filter_poi">Filters : set Points of Interest</string>
    <string name="filter_date">Filters : set Date</string>
    <string name="filter_photos">Filters : set amount of Photos</string>
    <string name="filter_price">Filters : set Price\'s range</string>
    <string name="title_activity_maps">Map</string>


    // ADMIN

    <string name="admin">Admin</string>
    <string name="insert_real_estates">Insert Real Estates</string>
    <string name="delete_real_estates">Delete Real Estates</string>
</resources>
