<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group0"
            android:checkableBehavior="single">
        <item android:id="@+id/filters"
            android:icon="@drawable/search"
            android:title="@string/search">
        </item>
        <item android:id="@+id/loan"
            android:icon="@drawable/dollar"
            android:title="@string/loan_simulator">
        </item>
        <item android:id="@+id/settings"
            android:icon="@drawable/settings"
            android:title="@string/settings">
        </item>
        <item android:id="@+id/power_off"
            android:icon="@drawable/power_settings"
            android:title="@string/power_off">
        </item>
    </group>

</menu>

