<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu">

        <item
            android:visible="true"
            android:id="@+id/add"
            android:icon="@drawable/add_button"
            app:showAsAction="ifRoom"
            android:title="@string/add">
        </item>

        <item
            android:visible="true"
            android:id="@+id/edit"
            android:icon="@drawable/edit"
            app:showAsAction="ifRoom"
            android:title="@string/edit">
        </item>

        <item
            android:visible="true"
            android:id="@+id/search_on"
            android:icon="@drawable/search"
            app:showAsAction="ifRoom"
            android:title="@string/search">
        </item>

        <item
            android:visible="true"
            android:id="@+id/save"
            android:icon="@drawable/save"
            app:showAsAction="ifRoom"
            android:title="@string/save">
        </item>


</menu>