<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:layout_gravity="center"
    android:orientation="vertical">

    <!-- Toolbar -->
    <include
        android:id="@+id/app_actionbar"
        layout="@layout/app_actionbar" />


    <GridLayout
        android:id="@+id/labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:columnCount="6">

        <TextView
            android:id="@+id/type_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorGrey"
            android:gravity="center"
            android:padding="2dip"
            android:layout_margin="2dip"
            android:text="@string/type"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/surface_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorGrey"
            android:gravity="center"
            android:padding="2dip"
            android:layout_margin="2dip"
            android:text="@string/surface"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/poi_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorGrey"
            android:gravity="center"
            android:padding="2dip"
            android:layout_margin="2dip"
            android:text="@string/points_of_interest"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/status_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorGrey"
            android:gravity="center"
            android:padding="2dip"
            android:layout_margin="2dip"
            android:text="@string/status"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/photos_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorGrey"
            android:gravity="center"
            android:padding="2dip"
            android:layout_margin="2dip"
            android:text="@string/photos"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorGrey"
            android:gravity="center"
            android:padding="2dip"
            android:layout_margin="2dip"
            android:text="@string/price"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/type_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="20dip"
            android:gravity="center"
            android:padding="2dip"
            android:layout_margin="2dip"
            android:text="@string/suspens"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/surface_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="20dip"
            android:gravity="center"
            android:padding="2dip"
            android:layout_margin="2dip"
            android:text="@string/suspens"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/poi_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="20dip"
            android:gravity="center"
            android:padding="2dip"
            android:layout_margin="2dip"
            android:text="@string/suspens"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/status_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="20dip"
            android:gravity="center"
            android:padding="2dip"
            android:layout_margin="2dip"
            android:text="@string/suspens"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/photos_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="20dip"
            android:gravity="center"
            android:padding="2dip"
            android:layout_margin="2dip"
            android:text="@string/suspens"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="20dip"
            android:gravity="center"
            android:padding="2dip"
            android:layout_margin="2dip"
            android:text="@string/suspens"
            android:textColor="@color/colorBlack"/>
    </GridLayout>

</LinearLayout>