<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <!-- Toolbar -->
    <include
        android:id="@+id/app_actionbar"
        layout="@layout/app_actionbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dip"
            android:gravity="center"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="200dip"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/currency_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="5dip"
                    android:text="@string/currency"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/value_title"
                    android:textStyle="bold" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/item_margin"
                            android:gravity="center"
                            android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/dollar_btn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:drawableEnd="@drawable/dollar"
                            android:text="@string/dollar"/>

                        <RadioButton
                            android:id="@+id/euro_btn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:drawableEnd="@drawable/euro"
                            android:text="@string/euro"/>

                        </LinearLayout>
                    </RadioGroup>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dip"
            android:gravity="center"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="150dip"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="top"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:padding="5dip"
                        android:text="@string/admin"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/value_title"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/insert_real_estates"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dip"
                        android:minWidth="20dip"
                        android:layout_gravity="center"
                        android:background="@color/colorSecondaryDark"
                        android:gravity="center"
                        android:padding="5dip"
                        android:text="@string/insert_real_estates"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/value_title"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/delete_real_estates"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dip"
                        android:minWidth="20dip"
                        android:layout_gravity="center"
                        android:background="@color/colorError"
                        android:gravity="center"
                        android:padding="5dip"
                        android:text="@string/delete_real_estates"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/value_title"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>
